--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "photo-cropper",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html"
@@ -10,7 +9,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cropperjs": "^2.0.0",
-    "parcel-bundler": "^1.12.5"
+    "cropperjs": "^1.5.12",
+    "parcel": "^2.9.3"
+  },
+  "devDependencies": {
+    "process": "^0.11.10"
   }
 }
